--- a/espoir/index.html
+++ b/espoir/index.html
@@ -10,73 +10,334 @@
 <body>
 
 <header>
-  <a href="#"><h1>eSpoir</h1></a>
 
-  <div class="section-slide-controller">
-     <a href="#"><h2>FAQ</h2></a>
 
-     <input type="image" src="" name="" value="">
-
-     <div></div>
-     <div></div>
-
-  </div>
-  
   <nav>
-        <ul>
+        <div>
+      <h1>eSpoir</h1>
+      <img src="image/header-logo.png" alt="">
+    </div>
+
+        <ul class="nav-icon">
+              <li>
+                  <a href="#" stlye="background-image:url('image/nav/search.png')">검색</a>
+                  <div>
+                    <cite>SEARCH</cite>
+                    <span>검색어를 입력하여 원하시는 정보를 정확하고 빠르게 찾아보세요.</span>
+                    <div>
+                      <input type="text">
+                      <a href="#"></a>
+                    </div>
+                    <ul>
+                      <li>인기검색어</li>
+                      <li>&#35; 코랄류드 런칭&#33;</li>
+                      <li>&#35;컬러 그라데이션 북</li>
+                      <li>&#35;페이스 바니쉬</li>
+                      <li>&#35;코랄류드 컬렉션</li>
+                    </ul>
+                  </div>
+              </li>
+              <li>
+                <a href="#" stlye="background-image:url('image/nav/spot.png')">위치</a>
+                <div>
+                   <div>
+                        <div>
+                          <cite>STORE SEARCH</cite>
+                          <div>
+                             <select class="" name="">
+                               <option value="">전국</option>
+                               <option value="">서울</option>
+                               <option value="">부산</option>
+                             </select>
+                             <input type="text">
+                             <a href="#"></a>
+                          </div>
+                        </div>
+
+                        <div>
+                          <cite>STORE LIST</cite>
+                          <list></list>
+                        </div>
+                   </div>
+                   <figure>
+                     <a href="#"></a>
+                   </figure>
+                </div>
+              </li>
+              <li>
+                <a href="#" stlye="background-image:url('image/nav/login.png')">로그인</a>
+                <div>
+                   <div>
+                      <cite>회원가입</cite>
+                      <input type="text" placeholder="아이디" name="" value="">
+                      <input type="text" placeholder="비밀번호" name="" value="">
+                      <a href="#"></a>
+                   </div>
+
+                   <div>
+                       <cite>온디맨드 서비스 주문 조회</cite>
+                       <input type="text" placeholder="핸드폰번호" name="" value="">
+                       <input type="text" placeholder="주문번호" name="" value="">
+                       <a href="#"></a>
+                   </div>
+
+                   <div>
+                       <ul>
+                         <li>
+                           <cite>JOIN US</cite>
+                           <span>에스쁘아 회원이 아니세요?<br />회원이 되시면 다양한 혜택을 누리실 수 있습니다.</span>
+                           <a href="#">회원가입</a>
+                         </li>
+
+                         <li>
+                           <cite>PASSWORD &#47; ID</cite>
+                           <span>아이디와 비밀번호를 잊으셧나요?<br />빠르고 안전하게 찾아드리겠습니다.</span>
+                           <a href="#">아이디 찾기</a>
+                           <a href="#">패스워드 찾기</a>
+                         </li>
+
+                         <li>
+                           <cite>비회원 주문 조회</cite>
+                           <span>에스쁘아 제품을 구매하셨나요?<br />회원이 되시면 다양한 혜택을 누리실 수 있습니다.</span>
+                           <a href="#">주문 조회하기</a>
+                         </li>
+                       </ul>
+                   </div>
+                </div>
+              </li>
+              <li>
+                <a href="#" stlye="background-image:url('image/nav/cart.png')">장바구니</a>
+                <div>
+                  <div>
+                        <cite>장바구니</cite>
+                        <div>
+                          <span>선택한 상품이 없습니다.</span>
+                          <a href="#"><</a>
+                          <a href="#">></a>
+                        </div>
+                        <a href="#">장바구니 보기</a>
+
+                        <cite>주문&#47;배송</cite>
+                        <a href="#">주문&#47;배송 조회</a>
+                  </div>
+
+                  <ul>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                  </ul>
+
+
+                </div>
+              </li>
+        </ul>
+
+        <ul >
             <li>
               <a href="#">SHOP</a>
+              <div>
+                  <ul>
+                    <li>PRODUCT</li>
+                    <li>립<i></i></li>
+                    <li>아이<i></i></li>
+                    <li>치크<i></i></li>
+                    <li>네일<i></i></li>
+                    <li>페이스 메이크업<i></i></li>
+                    <li>스킨케어<i></i></li>
+                    <li>향수<i></i></li>
+                    <li>프로 툴<i></i></li>
+                    <li>스페셜세트<i></i></li>
+                  </ul>
+
+                  <ul>
+                    <li>베스트 셀러</li>
+                    <li>신제품</li>
+                    <li>트라이 미 박스</li>
+                    <li>터치 업 투고</li>
+                    <li>라스트 찬스</li>
+                    <li>아이 믹스 앤 매치</li>
+                  </ul>
+
+                  <figure>
+                    <a href="#"></a>
+                  </figure>
+
+              </div>
             </li>
             <li>
               <a href="#">PRO TIP</a>
+              <div>
+                  <ul>
+                    <li>FINDING<br />SYSTEM
+                       <div>당신을 위한 <br />최적의 차운데이션,컬러,<br />브러쉬를 찾아보세요.</div>
+                    </li>
+                    <li>파운데이션 파인더</li>
+                    <li>컬러 파인더</li>
+                    <li>브러쉬 파인더</li>
+                  </ul>
+                  <ul>
+                    <li>PRO TIP
+                      <div>매일 업데이트 되는 <br />아티스트 메이크업 팁으로<br />새로운 모습으로 변신 해보세요.</div>
+                    </li>
+                    <li>메이크업 ALIVE</li>
+                    <li>프로 S.O.S</li>
+                    <li>아티스트 톡</li>
+                  </ul>
+                  <figure>
+                    <a href="#"></a>
+                  </figure>
+              </div>
             </li>
             <li>
               <a href="#">EVENT</a>
+              <div>
+                  <ul>
+                    <li>EVENT
+                       <div>지금 진행중인 다양한 이벤트를<br />바로 확인해보세요</div>
+                    </li>
+                    <li>진행중인 이벤트</li>
+                    <li>종료된 이벤트</li>
+                    <li>당첨자 발표</li>
+                  </ul>
+                  <ul>
+                    <li>ONLY ONLINE
+                      <div>에스쁘아 온라인 만의<br />특별한 혜택을 바로 만나보세요.</div>
+                    </li>
+                    <li>큐빅스토어</li>
+                    <li>뷰티테스터 신청하기</li>
+                    <li>이달의 멤버십 혜택</li>
+                  </ul>
+                  <figure>
+                    <a href="#"></a>
+                  </figure>
+
+              </div>
             </li>
             <li>
               <a href="#">SERVICE</a>
+              <div>
+                  <ul>
+                    <li>ESPOIR<br />MEMBERSHIP
+                       <div>다양한 혜택을 누릴 수 있는<br />에스쁘아만의 멤버십 서비스를<br />소개합니다.</div>
+                    </li>
+                    <li>멤버쉽</li>
+                    <li>VVIP 라운지</li>
+                  </ul>
+                  <ul>
+                    <li>OFFLINE<br />SERVICE
+                      <div>에스쁘아의 프로페셔널한<br />서비스를 더욱 가까이 경험해<br />해보세요.</div>
+                    </li>
+                    <li>아이브로우바</li>
+                    <li>메이크업 레슨</li>
+                  </ul>
+                  <figure>
+                    <a href="#"></a>
+                  </figure>
+
+              </div>
             </li>
             <li>
               <a href="#">REVIEW</a>
+              <div>
+                  <ul>
+                    <li>SOCIAL REVIEW
+                       <div>SNS에서 화제가 되고 있는<br />에스쁘아 아이템 후기를<br />지금 바로 확인해보세요.</div>
+                    </li>
+                    <li>소셜 리뷰</li>
+                  </ul>
+                  <ul>
+                    <li>REVIEW BOARD
+                      <div>에스쁘아 상품을 직접 구매한 <br />고객분들의 생생한 후기를<br />지금바로 확인해보세요.</div>
+                    </li>
+                    <li>리뷰 라이브 보드</li>
+                  </ul>
+                  <figure>
+                    <a href="#"></a>
+                  </figure>
+
+              </div>
             </li>
             <li>
               <a href="#">BRAND</a>
-            </li>
-            <li>
-              <a href="#">검색</a>
-            </li>
-            <li>
-              <a href="#">위치</a>
-            </li>
-            <li>
-              <a href="#">로그인</a>
+              <div>
+                  <ul>
+                    <li>POWER OF<br />TRANSFORMATION
+                       <div>아시아 프로페셔널 메이크업 브랜드<br />에스쁘아의 이야기를 만나보세</div>
+                    </li>
+                    <li>브랜드 컨셉</li>
+                    <li>브랜드 히스토리</li>
+                    <li>뉴 컬렉션</li>
+                    <li>아티스트 스튜디오</li>
+                    <li>매장 찾기</li>
+                  </ul>
+                  <ul>
+                    <li>WHAT'S ON ESPOIR
+                      <div>온라인부터 오프라인까지<br />에스쁘아의 모든것을 확인<br />해보세요.</div>
+                    </li>
+                    <li>뉴스</li>
+                    <li>소셜 에스쁘아</li>
+                  </ul>
+                  <figure>
+                    <a href="#"></a>
+                  </figure>
+
+              </div>
             </li>
         </ul>
+
+
    </nav>
   <!-- nav&section slide -->
 
-
+  <div class="bg-grid pr">
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+  </div>
 </header>
 
 
 
 <section id ="main">
 
-   <a href="#"><h2>MAIN</h2></a>
+   <div class="main-controller pa">
+     <a href="#"><i></i> FAQ</a>
+     <a href="#">SHOP <i></i></a>
+   </div>
 
    <!-- main slide banner -->
-   <div>
-       <ul>
-         <li>
-           <img src="" alt="">
-         </li>
-         <li>
-           <img src="" alt="">
-         </li>
-         <li>
-           <img src="" alt="">
-         </li>
-       </ul>
+   <div class="main-slide pr">
+       <h2>MAIN</h2>
+
+       <div class="main-slide-btn pa">
+          <a href="#" class="main-slide-next"> > </a>
+          <a href="#" class="main-slide-prev"> < </a>
+       </div>
+
+       <div class="main-slide-view pr">
+           <ul>
+             <li>
+               <img src="image/main/main-slide-1-txt.png" alt="">
+               <img src="image/main/main-slide-1.jpg" alt="">
+             </li>
+             <li>
+               <img src="image/main/main-slide-2-txt.png" alt="">
+               <img src="image/main/main-slide-2.jpg" alt="">
+             </li>
+             <li>
+               <img src="image/main/main-slide-3-txt.png" alt="">
+               <img src="image/main/main-slide-3.jpg" alt="">
+             </li>
+             <li>
+               <img src="image/main/main-slide-4-txt.png" alt="">
+               <img src="image/main/main-slide-4.jpg" alt="">
+             </li>
+           </ul>
+      </div>
+
+        <img src="" alt="">
+
    </div>
    <!-- main slide banner end-->
 
