--- a/espoir/index.html
+++ b/espoir/index.html
@@ -318,139 +318,320 @@
        <div class="main-slide-view pr">
            <ul>
              <li>
-               <img src="image/main/main-slide-1-txt.png" alt="">
+               <div>
+                 <img src="image/main/main-slide-1-txt.png" alt="">
+               </div>
                <img src="image/main/main-slide-1.jpg" alt="">
              </li>
              <li>
-               <img src="image/main/main-slide-2-txt.png" alt="">
+               <div>
+                 <img src="image/main/main-slide-2-txt.png" alt="">
+               </div>
                <img src="image/main/main-slide-2.jpg" alt="">
              </li>
              <li>
-               <img src="image/main/main-slide-3-txt.png" alt="">
+               <div>
+                 <img src="image/main/main-slide-3-txt.png" alt="">
+               </div>
                <img src="image/main/main-slide-3.jpg" alt="">
              </li>
              <li>
-               <img src="image/main/main-slide-4-txt.png" alt="">
+               <div>
+                 <img src="image/main/main-slide-4-txt.png" alt="">
+               </div>
                <img src="image/main/main-slide-4.jpg" alt="">
              </li>
            </ul>
       </div>
 
-        <img src="" alt="">
+      <div class="main-scroll pr">
+        <img src="image/main/makeupro.png" alt="">
+        <img src="image/main/scroll.png" alt="">
+      </div>
 
    </div>
    <!-- main slide banner end-->
 
    <!-- bext/new item slide-->
-   <div>
-      <ul>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-      </ul>
+   <div class="bnboard">
 
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="bnb-btn">
+        <a class="on" href="#"><img src="image/main/best-on.png" alt="bestitem"><span>BEST SELLER</span></a>
+        <a href="#"><img src="image/main/newitem.png" alt=""><span>NEW ITEM</span></a>
+      </div>
+
+      <div class="bnb-best-view on">
+        <ul>
+          <li>
+              <img src="image/product/1.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/2.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/3.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/4.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/5.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/6.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/1.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/1.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/1.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+          <li>
+              <img src="image/product/1.jpg" alt="">
+              <div>
+                <i>에스쁘아 립스틱 노웨어W</i>
+                <p>38,000</p>
+                <a href="#">GO SHOP</a>
+              </div>
+          </li>
+        </ul>
+
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+
+      <div class="bnb-new-view">
+        <ul>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+          <li>
+              <img src="" alt="">
+              <i>에스쁘아 립스틱 노웨어W</i>
+              <p>38,000</p>
+              <a href="#">GO SHOP</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+
+
 
    </div>
    <!-- bext/new item slide end-->
 
-   <!-- spring -->
-   <div>
-     <div></div>
-     <div>
-        <img src="" alt="">
-        <div></div>
-     </div>
+   <!-- newcol -->
+   <div class="newcol">
+        <img src="image/nowear.png" alt="">
+        <img src="image/nowear-i.jpg" alt="">
    </div>
-   <!-- spring end-->
+   <!-- newcol end-->
 
    <!-- super grid -->
-   <div class="super-grid">
+   <div class="algrid">
 
-     <div class="super-grid-left">
+     <div class="algrid-left">
            <ul>
-             <li></li>
-             <li></li>
-             <li></li>
-             <li></li>
+             <li>
+               <img src="image/q1.jpg" alt="">
+               <img src="image/q1.png" alt="">
+
+             </li>
+
+             <li>
+               <img src="image/q2.jpg" alt="">
+               <img src="image/q2.png" alt="">
+             </li>
+
+             <li class="gradation">
+               <div></div>
+               <img src="image/q3.png" alt="">
+             </li>
+
+             <li>
+               <img src="image/q4.jpg" alt="">
+               <img src="image/q4.png" alt="">
+             </li>
+
            </ul>
      </div>
 
-     <div class="super-grid-right">
-        <div class="super-grid-right-s"></div>
-        <div class="super-grid-right-m"></div>
+     <div class="algrid-right fr pr">
+        <img src="image/r-title.png" alt="">
+        <div class="algrid-right-s">
+
+          <div class="algrid-right-s-btn">
+            <a href="#"> > </a>
+            <a href="#"> < </a>
+          </div>
+          <ul>
+            <li>
+              <a href="">
+                <img src="" alt="">
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="" alt="">
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="" alt="">
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="" alt="">
+                <span></span>
+              </a>
+            </li>
+          </ul>
+
+        </div>
+        <div class="algrid-right-m">
+
+          <div>
+            <img src="image/pro-sos.png" alt="">
+            <span>에스쁘아 프로 아티스트와 함께하는</span>
+            <span>본격 뷰티예능!</span>
+            <span>어려웠던 메이크업을</span>
+            <span>더욱 쉽고 재미있게 배워보세요.</span>
+            <i></i>
+          </div>
+
+          <div class="algrid-right-m-video">
+
+          </div>
+
+        </div>
      </div>
 
    </div>
    <!-- super grid end-->
 
    <!-- social review -->
-   <div>
+   <div class="social-review">
+     <div class="social-review-line"></div>
+     <cite>social-review</cite>
      <ul>
        <li></li>
        <li></li>
@@ -471,7 +652,7 @@
    <!-- social review end-->
 
    <!-- endding -->
-   <div></div>
+   <div class="ending"></div>
    <!-- endding end-->
 
 </section>
