--- a/kakao/index.html
+++ b/kakao/index.html
@@ -19,25 +19,25 @@
       </div>
 
       <div class="gnb">
-          <h1>kakao</h1>
+          <h1><a href="index.html">kakao</a></h1>
           <ul>
             <li>
-              <a href="#">카카오</a>
+              <a class="gnb-1" href="#">카카오</a>
             </li>
             <li>
-              <a href="#">투자정보</a>
+              <a class="gnb-2" href="#">투자정보</a>
             </li>
             <li>
-              <a href="#">인재영입</a>
+              <a class="gnb-3" href="#">인재영입</a>
             </li>
             <li>
-              <a href="#">새소식</a>
+              <a class="gnb-4" href="#">새소식</a>
             </li>
             <li>
-              <a href="#">고객문의</a>
+              <a class="gnb-5" href="#">고객문의</a>
             </li>
             <li>
-              <a href="#">프라이버시 정책</a>
+              <a class="gnb-6" href="#">프라이버시 정책</a>
             </li>
           </ul>
       </div>
