--- a/kakao/pages/careers.html
+++ b/kakao/pages/careers.html
@@ -36,43 +36,65 @@
 
 </nav>
 <section>
-  <div class="main-slide pa">
+  <div class="main-slide pr">
     <div class="slide-btn">
-      <a href="#none">></a>
-      <a href="#none"><</a>
+      <a href="#none" style="background-position:-210px -190px">></a>
+      <a href="#none" style="background-position:-210px -240px"><</a>
     </div>
 
     <div class="slide-view pr">
       <ul>
         <li class="1">
           <div>
-            <div>
-              
-            </div>
+            <a>
+              <span>기술/Doyle</span>
+              <strong>항상 재밌게 일하고자 하는<br />동료를 기다리고 있습니다.</strong>
+              <i>INTERVIEW ></i>
+            </a>
             <span>1<i>/5</i></span>
             <img src="../image/careers/1.jpg" alt="">
           </div>
         </li>
         <li class="2">
           <div>
+            <a>
+              <span>기술/Esther</span>
+              <strong>최고의 환경에서<br />최고의 데이터베이스<br />엔지니어가 되세요</strong>
+              <i>INTERVIEW ></i>
+            </a>
             <span>2<i>/5</i></span>
             <img src="../image/careers/2.jpg" alt="">
           </div>
         </li>
         <li class="3">
           <div>
+            <a>
+              <span>기술/Matt</span>
+              <strong>가장 중요한 자산인<br />데이터를 책임지고 있습니다.</strong>
+              <i></i>
+            </a>
             <span>3<i>/5</i></span>
             <img src="../image/careers/3.jpg" alt="">
           </div>
         </li>
         <li class="4">
           <div>
+            <a>
+              <span>기술/Kenny</span>
+              <strong>사용자,광고주,회사가 원하는<br />가치를 고민하고 연구합니다.</strong>
+              <i>INTERVIEW ></i>
+            </a>
             <span>4<i>/5</i></span>
             <img src="../image/careers/4.jpg" alt="">
           </div>
         </li>
         <li class="5">
           <div>
+            <a>
+              <span>기술/Harry</span>
+              <strong>카카오는 모바일 서비스의<br />최전방이며 기회의 땅.</strong>
+              <i>INTERVIEW ></i>
+            </a>
             <span>5<i>/5</i></span>
             <img src="../image/careers/5.jpg" alt="">
           </div>
@@ -82,24 +104,28 @@
 
   </div>
 
-  <div>
+  <div class="inside">
     <ul>
       <li>
         <a href="#none">
           <span>인사이드 카카오</span>
-          <img src="" alt="">
+          <img src="../image/careers/inside.gif" alt="">
         </a>
       </li>
       <li>
         <a href="#none">
           <span>지원하기</span>
-          <img src="" alt="">
+          <div>
+            <strong>86</strong>
+          </div>
         </a>
       </li>
       <li>
         <a href="#none">
           <span>일하는 방식</span>
-          <img src="" alt="">
+          <div>
+            <span>다른 부서의<br />일도 우리의<br />일입니다.</span>
+          </div>
         </a>
       </li>
     </ul>
@@ -107,7 +133,7 @@
 
 </section>
 <footer>
-   <strong>개인정보처리방침</strong><span>이용약관</span>
+   <strong>개인정보처리방침</strong><span>이용약관</span><br />
    <i>Copyright © Kakao Corp. All rights reserved.</i>
 </footer>
 </body>
